--- a/FAB-COST_bandit_MARKDOWN.ipynb
+++ b/FAB-COST_bandit_MARKDOWN.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "source": [
     "Firstly, data must be fed into the algorithm in the form of a co-occurrence matrix $\\mathbf{X} \\in \\mathbb{R}^{T \\times K}$ (the input) and the binary vector $\\mathbf{y} \\in \\mathbb{R}^T$ (the output). \n",
-    "This can either be data fed in or simulated data. Due to UK data sensitivity laws, the Auto Trader dataset used in (ref?) cannot be uploaded here but a simulated dataset is used to show. **I'm aware that there is inconsistency between notation on the paper and the code**"
+    "This can either be data fed in or simulated data. Due to UK data sensitivity laws, the Auto Trader dataset used in (ref?) cannot be uploaded here but a simulated dataset is used to show."
    ]
   },
   {
